--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.my-btn-primary{
+    @apply bg-gradient-to-r from-[#6f85ff] to-[#916aff] px-3 py-3 text-white font-semibold rounded-md text-sm md:text-base
+}
+
+.nav-container{
+    @apply bg-gradient-to-r from-[#eef0fc] to-[#f1ecff] md:h-[100px] flex items-center 
+}
+
+.nav-bar{
+    @apply  md:flex justify-between items-center container mx-auto p-5 md:p-0 mt-2 text-center md:mt-0 space-y-4 md:space-y-0
+}
+
+.nav-link{
+    @apply text-xs font-medium text-slate-600 flex gap-20 
+}
