--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,14 @@
 .text-gradient {
     @apply font-extrabold text-transparent text-5xl md:text-7xl bg-clip-text bg-gradient-to-r from-[#8497ff] to-[#875bff] 
 }
+
+.category-container{
+    @apply flex flex-col md:flex-row justify-center items-center gap-6 mt-10
+}
+
+.category-card{
+    @apply flex flex-col  bg-gradient-to-r from-[#f7f8fe] to-[#f6f3ff] rounded-md p-10 space-y-7 w-[300px]
+}
+.category-img{
+    @apply  h-[60px] w-[60px] p-3 bg-[#ede6fe] rounded-md
+}
