--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 }
 
 .nav-link {
-    @apply text-xs font-medium text-slate-600 flex gap-20
+    @apply text-xs font-medium text-slate-600 flex gap-14 md:gap-20
 }
 
 .text-gradient {
