--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,7 @@
 .category-img{
     @apply  h-[60px] w-[60px] p-3 bg-[#ede6fe] rounded-md
 }
+
+.my-btn-secondary{
+    @apply hover:bg-gradient-to-l hover:from-[#8497ff] hover:to-[#875bff] border px-4 py-1 border-violet-400 rounded-sm font-semibold bg-clip-text text-transparent bg-gradient-to-r from-[#8497ff] to-[#875bff]  hover:bg-clip-padding hover:text-white transition duration-300
+}
